# WeatherMonitorApp

./: README.md
client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  weatherwindow.cpp  weatherwindow.h  weatherwindow.ui
server/: CMakeLists.txt  main.cpp
